CB-21113 - Upgrade Azure SDK in integration-test module
This commit contains
 - almost the same content as in https://github.com/hortonworks/cloudbreak/pull/14722/files
 - except for the fixes of
   - https://jira.cloudera.com/browse/CB-21777 - Log file validation fails with 409, ContainerAlreadyExists The specified container already exists.
   - https://jira.cloudera.com/browse/CB-21595 - [E2E] deleteInstances fails with The specified ID is not a valid Azure resource ID.
   - stopInstances now use instanceName instead of full Azure resourceId